crates/fe/tests/fixtures/cli_output/single_files/quote_hole_wrong_kind.snap
---
source: crates/fe/tests/cli_output.rs
assertion_line: 1822
expression: output
input_file: tests/fixtures/cli_output/single_files/quote_hole_wrong_kind.fe
---
=== STDERR ===
errors in file://<project>/crates/fe/tests/fixtures/cli_output/single_files/quote_hole_wrong_kind.fe

error[13-0010]: derive provider `FieldTag` failed to derive `Tagged`
   ┌─ quote_hole_wrong_kind.fe:34:8
   │
22 │             body = quote { ${field} }
   │                            -------- invalid quote: a `Field` handle only fills member-access holes (`self.${field}`); expression holes accept quote values and compile-time bool/string values
   ·
34 │ derive Tagged for Point using FieldTag
   │        ^^^^^^ requested here: invalid quote: a `Field` handle only fills member-access holes (`self.${field}`); expression holes accept quote values and compile-time bool/string values
   │
   = the provider `FieldTag` ran at compile time and failed; the secondary label points at the failing provider code


=== EXIT CODE: 1 ===
